--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Lab_02
+application.title=Lab02_Jacques
 application.vendor=6298805
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Lab_02.jar
+dist.jar=${dist.dir}/Lab02_Jacques.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Lab_02
+dist.jlink.output=${dist.jlink.dir}/Lab02_Jacques
 endorsed.classpath=
 excludes=
 includes=**
@@ -73,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Lab_02
-main.class=lab_02.Lab_02
+jlink.launcher.name=Lab02_Jacques
+main.class=lab_02.Lab02_Jacques
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
