--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab02_Jacques
-main.class=lab_02.Lab02_Jacques
+main.class=lab_02.Lab_02
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
